<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="select_text">Select the categories you are interested in:</string>
    <string name="next">Next</string>
    <string name="movies">Movies</string>
    <string name="shopping">Shopping</string>
    <string name="restaurants">Restaurants</string>
    <string name="events">Events</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find_loc">FindLoc</string>
    <string name="title_activity_gmail_login">GmailAuthentication</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_plot_loc">PlotLoc</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_add_deal_form">AddDealForm</string>
    <string name="title_activity_read_json">ReadJson</string>
    <string name="logo">AlertMe</string>
    <string name="jsonoutput">JSON reader</string>
    <string name="title_activity_single_list_item">SingleListItemActivity</string>
    <string name="title_activity_plot_map_json">PlotMapJsonActivity</string>
</resources>
