<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" >

<RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#A9C6EC">
  	<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@layout/header_gradient" >
  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/logo"
  				    		android:contentDescription="@string/logo"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"
  							android:background="#A9C6EC"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends -->  
	

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/header"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.firstapp.MainActivity" >

    <TextView
        android:id="@+id/select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_text"
        android:textSize="14dp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="car rentals" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping" />

    <Button
        android:id="@+id/ConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" 
        android:onClick="onNextClicked"/>

    <Button
        android:id="@+id/openpopup"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="Add Deals" />

    <Button
        android:id="@+id/readjson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jsonoutput" />

</LinearLayout>

</RelativeLayout>
</ScrollView>


